Update requirements by removing and adding packages
Removed unused dependencies and added pypdf.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 fastapi
 uvicorn
-python-multipart
 requests
-sentence-transformers
+pypdf
 numpy
 faiss-cpu
 openai
-supabase
-pydantic
-starlette
